--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.11-SNAPSHOT'
-	id 'maven-publish'
+	id 'org.quiltmc.loom' version '0.12.23'
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
@@ -11,6 +10,15 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
+	// Quilt maven
+	maven {
+		name 'Quilt'
+		url 'https://maven.quiltmc.org/repository/snapshot'
+	}
+	maven {
+		name 'Quilt Release'
+		url 'https://maven.quiltmc.org/repository/release'
+	}
 	// Add repositories to retrieve artifacts from in here.
 	// You should only use this when depending on other mods because
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -21,14 +29,19 @@ repositories {
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	mappings(loom.layered {
+		it.officialMojangMappings {
+			setNameSyntheticMembers(false)
+		}
+		it.addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${project.minecraft_version}+build.${project.quilt_mappings}:v2"))
+	})
+	modImplementation "org.quiltmc:quilt-loader:${project.loader_version}"
 }
 
 processResources {
 	inputs.property "version", project.version
 
-	filesMatching("fabric.mod.json") {
+	filesMatching("quilt.mod.json") {
 		expand "version": project.version
 	}
 }
@@ -48,22 +61,5 @@ java {
 jar {
 	from("LICENSE") {
 		rename { "${it}_${project.archivesBaseName}"}
-	}
-}
-
-// configure the maven publication
-publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			from components.java
-		}
-	}
-
-	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
 	}
 }
