--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,13 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
 	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.1
-	loader_version=0.13.3
+	quilt_mappings=22
+	loader_version=0.16.0-beta.5
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	maven_group = olivermakesco.de
+	archives_base_name = potion-tweaks
 
 # Dependencies
-	fabric_version=0.47.8+1.18.2
+	qsl_version = 1.1.0-beta.2
