--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,8 @@ pluginManagement {
         }
         mavenCentral()
         gradlePluginPortal()
+        maven { url = "https://maven.quiltmc.org/repository/snapshot" }
+        maven { url = "https://maven.quiltmc.org/repository/release" }
+        maven { url = 'https://server.bbkr.space/artifactory/libs-release/' }
     }
 }
