--- a/gradle.properties
+++ b/gradle.properties
@@ -5,12 +5,9 @@ org.gradle.jvmargs=-Xmx1G
 	# check these on https://fabricmc.net/develop
 	minecraft_version=1.18.2
 	quilt_mappings=22
-	loader_version=0.16.0-beta.5
+	loader_version=0.16.0-beta.7
 
 # Mod Properties
 	mod_version = 1.0.0
 	maven_group = olivermakesco.de
-	archives_base_name = potion-tweaks
-
-# Dependencies
-	qsl_version = 1.1.0-beta.2
+	archives_base_name = rule_api
